Fix to infographic background image alignment and size.

--- a/css/src/_infographic.scss
+++ b/css/src/_infographic.scss
@@ -2,6 +2,8 @@
 
 .infographic {
 	padding: 20px 15px;
+	background-position: center center;
+	background-size: cover;
 	@include clearfix;
 	
 	.stat {
